--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-dom": "^18.2.0",
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
   },
@@ -55,6 +57,7 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.18",
     "@types/react-instantsearch-dom": "^6.12.3",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.3",
     "cypress": "^9.5.2",
