--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-instantsearch-hooks-web": "^6.29.0",
     "react-intersection-observer": "^9.3.4",
     "react-slick": "^0.30.1",
+    "sharp": "^0.33.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
