configuring with the new server

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "medusa-next",
+  "name": "ecomerce-next",
   "version": "1.0.3",
   "private": true,
-  "author": "Kasper Fabricius Kristensen <kasper@medusajs.com> & Victor Gerbrands <victor@medusajs.com> (https://www.medusajs.com)",
-  "description": "Next.js Starter to be used with Medusa server",
+  "author": "Shlok Sheth",
+  "description": "Next.js Starter",
   "keywords": [
-    "medusa-storefront"
+    "storefront"
   ],
   "scripts": {
     "dev": "next dev -p 8000",
