--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@medusajs/modules-sdk": "^1.12.3",
     "@medusajs/pricing": "^0.1.4",
     "@medusajs/product": "^0.3.4",
-    "@medusajs/ui": "^2.2.0",
+    "@medusajs/ui": "^2.4.2",
     "@meilisearch/instant-meilisearch": "^0.7.1",
     "@paypal/paypal-js": "^5.0.6",
     "@paypal/react-paypal-js": "^7.8.1",
+    "@react-pdf/renderer": "^3.4.1",
     "@stripe/react-stripe-js": "^1.7.2",
     "@stripe/stripe-js": "^1.29.0",
     "algoliasearch": "^4.20.0",
